--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#e11a28" />
-    <meta
-      name="description"
-      content="Novo Nordisk Manufacturing Analytics Dashboard"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
-    <title>Novo Manufacturing Dashboard</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<!DOCTYPE html> 
+<html lang="en"> 
+  <head> 
+    <meta charset="utf-8" /> 
+    <link rel="icon" href="/favicon.ico" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+    <meta name="theme-color" content="#e11a28" /> 
+    <meta name="description" content="Novo Nordisk Manufacturing Analytics Dashboard" /> 
+    <link rel="manifest" href="/manifest.json" /> 
+    <title>Novo Manufacturing Dashboard</title> 
+  </head> 
+  <body> 
+    <div id="root"></div> 
+  </body> 
 </html> 
